Fix Justified Paragraph Alignment

--- a/src/main/webapp/resources/design/style.css
+++ b/src/main/webapp/resources/design/style.css
@@ -5,6 +5,9 @@
 body {
     background: #fafafa;
     overflow: hidden;
+}
+
+p {
     text-align: justify;
 }
 
